Small code improvments in way of formatting.